# SvdpGrantHunter

./:  .dockerignore  .claude-context.md  .env.example  ARCHITECTURE.md  AgentSpec.md.txt  BUGS.md  COMPLIANCE_REQUIREMENTS.md  DATABASE_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  MISSION_AND_SUCCESS_METRICS.md  README.md  SECURITY_REQUIREMENTS.md  app.py  check_imports.py  debug_regex.py  exporter.py  graph.py  health_check.py  hitl_handler.py  ingestion.py  initialize_db.py  pyproject.toml  railway.json  scout.py  simulate_flow.py  test_exporter.py  test_logic.py  writer.py
SvdpGrantAgent/: __init__.py  discovery.py  exporter.py  graph.py  guardrails.py  ingestion.py  schema.py  scout.py  writer.py
SvdpGrantAgent/factories/: __init__.py  db_factory.py  llm_factory.py  orchestrator_factory.py
_agent/workflows/: push_to_github.md
docs/end-of-build/: Agent_Cards.md  Exec_One_Pager.md  README.md
exports/: draft_TEST_MD_20260228_122354.md
factories/: db_factory.py  orchestrator_factory.py
guides/: 00_START_HERE.md  01_QUICK_REFERENCE.md  02_COMPLETE_GUIDE.md  03_DEPENDENCY_MANAGEMENT.md  04_AI_ASSISTANT_INTEGRATION.md  05_CLAUDE_CONTEXT_AND_BUGS.md  06_INFRASTRUCTURE_AS_CODE.md.md  07_CONFIGURATION_CONTROL.md  08_AGNOSTIC_FACTORIES.md  MASTER_AGENT_DISCOVERY_PROMPT.md  MASTER_DOCS_PROMPT.md
svdpgrantagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
